<resources>
    <string name="app_name">EldarWallet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Repeat password</string>
    <string name="appname">EldarWallet</string>
    <string name="signin">Sign In</string>
    <string name="digital_cards_list_title">Your cards:</string>
    <string name="add_card_desc_button">Add card</string>
    <string name="qr_paid">Qr paid</string>
    <string name="paid_contactless">Paid contactless</string>
    <string name="balance">Balance:</string>
    <string name="balance_tab">Balance</string>
    <string name="security_code">Security code</string>
    <string name="add_new_card">Add new Card</string>
    <string name="expiration_date_yyyymm">Expiration Date (MM/YY)</string>
    <string name="owner_name">Owner name</string>
    <string name="card_number">Card number</string>
    <string name="btn_pay">Generate QR pay</string>

    <string name="rapi_api_key">9a4f5a900dmsh074679de11bc8d9p1f1dcejsn2bc518e00e15</string>
    <string name="choose_the_card">Choose the card</string>
    <string name="choose_the_card_qr">Choose the card and generate your QR</string>
    <string name="selected_card">Selected Card</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="identification_number">Identification number</string>
    <string name="lastname">Lastname</string>
    <string name="logout">Logout</string>
    <string name="pay">Pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>